--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -13,6 +13,12 @@
           <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
         </li>
       </ng-container>
+
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
+      </li>
+
     </ul>
     <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ user.userName  | titlecase}}</a>
@@ -29,7 +35,7 @@
         placeholder="UserName">
       <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
         placeholder="Password">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+      <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
   </div>
 
