--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,15 +1,30 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
  <h2 class="text-center text-primary">Sign up</h2>
  <hr>
- <div class="form-group">
-   <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="UserName">
- </div>
 
  <div class="form-group">
-   <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
+   <label class="control-label" style="margin-right: 10px;">I am a:</label>
+   <label class="radio-inline">
+     <input type="radio" value='male' formControlName='gender'> Male
+   </label>
+   <label class="radio-inline">
+    <input type="radio" value='female' formControlName='gender' class="ml-3"> FeMale
+  </label>
  </div>
+
+<app-text-input [formControl]='this.registerForm.controls["username"]' [label]='"Username"'></app-text-input>
+<app-text-input [formControl]='this.registerForm.controls["knownAs"]' [label]='"knownAs"'></app-text-input>
+<app-date-input  [maxDate]="maxDate" [formControl]='this.registerForm.controls["dateOfBirth"]' [label]='"dateOfBirth"'></app-date-input>
+<app-text-input [formControl]='this.registerForm.controls["city"]' [label]='"city"'></app-text-input>
+<app-text-input [formControl]='this.registerForm.controls["country"]' [label]='"country"'></app-text-input>
+<app-text-input [formControl]='this.registerForm.controls["password"]' [label]='"Password"'  [type]='"password"'></app-text-input>
+<app-text-input [formControl]='this.registerForm.controls["confirmPassword"]' [label]='"Confirm Password"'  [type]='"password"' ></app-text-input>
+
  <div class="form-group text-center">
    <button class="btn btn-success mr-2" type="submit">Register</button>
    <button class="btn btn-default mr-2" (click)="cancel()">Cancel</button>
  </div>
 </form>
+
+<p>Form value: {{registerForm.value | json}}</p>
+<p>Form value: {{registerForm.status | json}}</p>
