--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,60 @@
+<div class="text-center mt-3">
+  <h2>Your matchs - {{pagination?.totalItems}} Found</h2>
+</div>
+
+<div class="container mt-3">
+  <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+    <div class="form-group">
+      <label>Age from: </label>
+      <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" [(ngModel)] = "userParams.minAge">
+    </div>
+
+    <div class="form-group px-2">
+      <label>Age to: </label>
+      <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" [(ngModel)] = "userParams.maxAge">
+    </div>
+
+    <div class="form-group px-2">
+      <label>Show: </label>
+      <select name="gender" style="width: 130px;" class="form-control ml-1" [(ngModel)]="userParams.gender">
+        <option *ngFor="let gender of this.genderList" [value]="gender.value">{{gender.display}}</option>
+      </select>
+    </div>
+
+    <button class="btn btn-primary ml-1" type="submit">Apply Filter</button>
+    <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filter</button>
+    <div class="col">
+      <div class="btn-group float-right">
+        <button type="button" class="btn btn-primary" name="orderBy" btnRadio="lastActive" (click)="this.loadMembers()"  [(ngModel)]="userParams.orderBy">Last Active</button>
+
+        <button type="button" class="btn btn-primary" name="orderBy" btnRadio="created"  (click)="this.loadMembers()" [(ngModel)]="userParams.orderBy">New Members</button>
+      </div>
+    </div>
+
+
+
+
+
+  </form>
+</div>
+
+
+
 <div class="row">
   <div *ngFor="let member of members" class="col-2">
     <app-member-card [member]="member"></app-member-card>
   </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="this.pagination">
+  <pagination
+    [boundaryLinks]="true"
+    [totalItems]="pagination.totalItems"
+    [itemsPerPage]="pagination.itemsPerPage"
+    previousText="&lsaquo;" nextText="&rsaquo;"
+    firstText="&laquo;" lastText="&raquo;"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    >
+  </pagination>
 </div>
