--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]='registerForm' (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]='registerForm' (ngSubmit)="this.registerForm.valid && register()" autocomplete="off">
  <h2 class="text-center text-primary">Sign up</h2>
  <hr>
 
@@ -20,8 +20,14 @@
 <app-text-input [formControl]='this.registerForm.controls["password"]' [label]='"Password"'  [type]='"password"'></app-text-input>
 <app-text-input [formControl]='this.registerForm.controls["confirmPassword"]' [label]='"Confirm Password"'  [type]='"password"' ></app-text-input>
 
+<div class="row mt-5" *ngIf="this.validationErrors">
+  <ul class="text-danger">
+    <li *ngFor="let error of this.validationErrors">{{error}}</li>
+  </ul>
+</div>
+
  <div class="form-group text-center">
-   <button class="btn btn-success mr-2" type="submit">Register</button>
+   <button [disabled]='!this.registerForm.valid' class="btn btn-success mr-2" type="submit">Register</button>
    <button class="btn btn-default mr-2" (click)="cancel()">Cancel</button>
  </div>
 </form>
